# sdd_connection_solver2

./: .env.example  .gitignore  README.md  fix_comprehensive_tests.py  fix_mock_responses.py  fix_mocks.py  fix_mocks_v2.py  fix_provider_mocks.py  fix_tests.py
backend/: pyproject.toml  pytest.ini
backend/chat_logs/: 01_gitignore.md
backend/src/: __init__.py  api.py  api_v1.py  exceptions.py  game_result.py  main.py  models.py  openai.py  pydantic.py  recommendation_engine.py
backend/src/api/: __init__.py  v2_game_results.py  v2_image_setup.py  v2_providers.py  v2_recommendations.py
backend/src/config/: __init__.py  environment.py
backend/src/database/: __init__.py  game_results_repository.py  migrations.py  schema.py
backend/src/langchain_community/: __init__.py
backend/src/llm_models/: __init__.py  completed_group.py  guess_attempt.py  llm_provider.py  puzzle_state.py  recommendation_request.py  recommendation_response.py
backend/src/middleware/: __init__.py  error_handler.py
backend/src/services/: README.md  __init__.py  config_service.py  configuration_service.py  health_service.py  image_word_extractor.py  llm_provider_factory.py  ollama_service.py  openai_service.py  prompt_service.py  recommendation_service.py  response_validator.py  simple_recommendation_service.py
backend/tests/api/: test_v2_game_results.py
backend/tests/contract/: test_configuration_service.py  test_environment_config.py  test_error_handling.py  test_health_api.py  test_middleware.py  test_next_recommendation.py  test_recommendations_api.py  test_record_response.py  test_setup_puzzle.py  test_setup_puzzle_from_image.py
backend/tests/e2e/: test_complete_puzzle_success.py  test_error_handling_scenarios.py  test_quickstart_scenarios.py
backend/tests/integration/: test_api_services.py  test_error_handling.py  test_frontend_backend_integration.py  test_llm_correct_flow_updates_state.py  test_llm_providers.py  test_openai_provider_flow.py  test_provider_error_handling.py  test_puzzle_workflow.py
backend/tests/mocks/: llm_mocks.py
backend/tests/support/: mock_response_object.py
backend/tests/unit/: test_api_service.py  test_csv_service.py  test_csv_validation_service.py  test_environment_config.py  test_error_handler.py  test_game_result.py  test_game_results_repository.py  test_image_word_extractor.py  test_llm_mocks.py  test_llm_provider_factory.py  test_models_service.py  test_ollama_provider.py  test_openai_provider.py  test_openai_service.py  test_openai_stub.py  test_puzzle_session.py  (+6 more)
(+283 files in other folders)
